// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SilenceComment /> Matches snapshot when collapsed 1`] = `
"
<div class="d-flex flex-row">
  <div class="flex-shrink-0 flex-grow-0">
    <svg
      aria-hidden="true"
      focusable="false"
      data-prefix="fas"
      data-icon="bell-slash"
      class="svg-inline--fa fa-bell-slash text-muted"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
      viewbox="0 0 640 512"
    >
      <path
        fill="currentColor"
        d="M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-90.2-70.7c.2-.4 .4-.9 .6-1.3c5.2-11.5 3.1-25-5.3-34.4l-7.4-8.3C497.3 319.2 480 273.9 480 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM406.2 416L160 222.1v4.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S115.4 416 128 416H406.2zm-40.9 77.3c12-12 18.7-28.3 18.7-45.3H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
      >
      </path>
    </svg>
  </div>
  <div class="mx-2 flex-shrink-1 flex-grow-1 mw-1p">
    <div class="components-managed-silence-comment text-truncate overflow-hidden">
      Mocked Silence
    </div>
    <div class="components-managed-silence-cite mt-1 d-flex flex-row">
      <span class="text-muted text-truncate overflow-hidden me-2">
        — me@example.com
      </span>
      <div class="d-flex flex-row justify-content-end flex-grow-1">
        <span class="badge bg-light components-label">
          Expires in 30 minutes
        </span>
      </div>
    </div>
  </div>
  <div class="flex-shrink-0 flex-grow-0">
    <div class="d-flex flex-column flex-sm-row justify-content-between align-items-center">
      <div class=" tooltip-trigger">
        <span class="bg-primary rounded-pill components-label-with-hover components-label badge">
          123
        </span>
      </div>
      <span class="badge components-label with-click">
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="chevron-down"
          class="svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 512 512"
          style="transition: transform 0.25s ease-in-out;"
        >
          <path
            fill="currentColor"
            d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when collapsed and multiple clusters are present 1`] = `
"
<div class="d-flex flex-row">
  <div class="flex-shrink-0 flex-grow-0">
    <svg
      aria-hidden="true"
      focusable="false"
      data-prefix="fas"
      data-icon="bell-slash"
      class="svg-inline--fa fa-bell-slash text-muted"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
      viewbox="0 0 640 512"
    >
      <path
        fill="currentColor"
        d="M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-90.2-70.7c.2-.4 .4-.9 .6-1.3c5.2-11.5 3.1-25-5.3-34.4l-7.4-8.3C497.3 319.2 480 273.9 480 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM406.2 416L160 222.1v4.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S115.4 416 128 416H406.2zm-40.9 77.3c12-12 18.7-28.3 18.7-45.3H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
      >
      </path>
    </svg>
  </div>
  <div class="mx-2 flex-shrink-1 flex-grow-1 mw-1p">
    <div class="components-managed-silence-comment text-truncate overflow-hidden">
      Mocked Silence
    </div>
    <div class="components-managed-silence-cite mt-1 d-flex flex-row">
      <span class="text-muted text-truncate overflow-hidden me-2">
        — me@example.com
      </span>
      <div class="d-flex flex-row justify-content-end flex-grow-1">
        <span class="badge bg-light components-label">
          Expires in 30 minutes
        </span>
        <span class="badge bg-secondary mx-1 components-label">
          ha
        </span>
      </div>
    </div>
  </div>
  <div class="flex-shrink-0 flex-grow-0">
    <div class="d-flex flex-column flex-sm-row justify-content-between align-items-center">
      <div class=" tooltip-trigger">
        <span class="bg-primary rounded-pill components-label-with-hover components-label badge">
          123
        </span>
      </div>
      <span class="badge components-label with-click">
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="chevron-down"
          class="svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 512 512"
          style="transition: transform 0.25s ease-in-out;"
        >
          <path
            fill="currentColor"
            d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when expanded 1`] = `
"
<div class="d-flex flex-row">
  <div class="flex-shrink-0 flex-grow-0">
    <svg
      aria-hidden="true"
      focusable="false"
      data-prefix="fas"
      data-icon="bell-slash"
      class="svg-inline--fa fa-bell-slash text-muted"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
      viewbox="0 0 640 512"
    >
      <path
        fill="currentColor"
        d="M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-90.2-70.7c.2-.4 .4-.9 .6-1.3c5.2-11.5 3.1-25-5.3-34.4l-7.4-8.3C497.3 319.2 480 273.9 480 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM406.2 416L160 222.1v4.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S115.4 416 128 416H406.2zm-40.9 77.3c12-12 18.7-28.3 18.7-45.3H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
      >
      </path>
    </svg>
  </div>
  <div class="mx-2 flex-shrink-1 flex-grow-1 mw-1p">
    <div class="components-managed-silence-comment ">
      Mocked Silence
    </div>
    <div class="components-managed-silence-cite mt-1 d-flex flex-row">
      <span class="text-muted text-truncate overflow-hidden ">
        — me@example.com
      </span>
    </div>
  </div>
  <div class="flex-shrink-0 flex-grow-0">
    <div class="d-flex flex-column flex-sm-row justify-content-between align-items-center">
      <div class=" tooltip-trigger">
        <span class="bg-primary rounded-pill components-label-with-hover components-label badge">
          123
        </span>
      </div>
      <span class="badge components-label with-click">
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="chevron-down"
          class="svg-inline--fa fa-chevron-down m-auto text-muted cursor-pointer"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 512 512"
          style="transition: transform 0.25s ease-in-out;"
        >
          <path
            fill="currentColor"
            d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when expanded and multiple clusters are present 1`] = `
"
<div class="d-flex flex-row">
  <div class="flex-shrink-0 flex-grow-0">
    <svg
      aria-hidden="true"
      focusable="false"
      data-prefix="fas"
      data-icon="bell-slash"
      class="svg-inline--fa fa-bell-slash text-muted"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
      viewbox="0 0 640 512"
    >
      <path
        fill="currentColor"
        d="M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-90.2-70.7c.2-.4 .4-.9 .6-1.3c5.2-11.5 3.1-25-5.3-34.4l-7.4-8.3C497.3 319.2 480 273.9 480 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM406.2 416L160 222.1v4.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S115.4 416 128 416H406.2zm-40.9 77.3c12-12 18.7-28.3 18.7-45.3H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
      >
      </path>
    </svg>
  </div>
  <div class="mx-2 flex-shrink-1 flex-grow-1 mw-1p">
    <div class="components-managed-silence-comment ">
      Mocked Silence
    </div>
    <div class="components-managed-silence-cite mt-1 d-flex flex-row">
      <span class="text-muted text-truncate overflow-hidden ">
        — me@example.com
      </span>
    </div>
  </div>
  <div class="flex-shrink-0 flex-grow-0">
    <div class="d-flex flex-column flex-sm-row justify-content-between align-items-center">
      <div class=" tooltip-trigger">
        <span class="bg-primary rounded-pill components-label-with-hover components-label badge">
          123
        </span>
      </div>
      <span class="badge components-label with-click">
        <svg
          aria-hidden="true"
          focusable="false"
          data-prefix="fas"
          data-icon="chevron-down"
          class="svg-inline--fa fa-chevron-down m-auto text-muted cursor-pointer"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
          viewbox="0 0 512 512"
          style="transition: transform 0.25s ease-in-out;"
        >
          <path
            fill="currentColor"
            d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;
